--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.02.05 01:10:12<br />
+<b>start</b> - 2023.02.06 01:10:13<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
-Germany_TresorICELimburg, not updated, 0.14792899408284654<br />
+Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -36.93000000000001<br />
+Hungary_VotiveChurch, not updated, -36.07000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -42,7 +42,7 @@ Spain_WineOClock kihagyva (100%), <br />
 Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
-USA_USMGoldenEagles, <b>updated</b>, 239, <a href="https://www.munzee.com/map/dj86pp7dz/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_USMGoldenEagles.json" target="_blank">json</a><br />
+USA_USMGoldenEagles, not updated, 0.0<br />
 USA_Turtle, not updated, 0.7054673721340379<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.8800000000000097<br />
@@ -175,7 +175,7 @@ Germany_SkylarkFeldlerche kihagyva (100%), <br />
 Netherlands_MysteryBikeField kihagyva (100%), <br />
 Australia_Brisbane, not updated, 0.0<br />
 Australia_EgyptianMask kihagyva (100%), <br />
-Germany_BerlinMunzeePin, not updated, 0.0<br />
+Germany_BerlinMunzeePin, not updated, 0.21000000000000085<br />
 Germany_DiamantBerlin, not updated, 0.0<br />
 Germany_BerlinBear, not updated, 0.0<br />
 Germany_HonowWappen, not updated, 0.3355704697986539<br />
@@ -274,13 +274,13 @@ Canada_JeffsFarm kihagyva (100%), <br />
 UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
 Germany_JohnTheFab41 kihagyva (100%), <br />
 Germany_RingoTheFab4, not updated, 0.4399999999999977<br />
-Germany_GeorgeTheFab42, <b>updated</b>, 894, <a href="https://www.munzee.com/map/u0w7yp6un/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_GeorgeTheFab42.json" target="_blank">json</a><br />
+Germany_GeorgeTheFab42, not updated, 0.0<br />
 Germany_PaulTheFab43, not updated, 0.3499999999999943<br />
 Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
 Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
-Hungary_StroopwafelInvasionInFelsogalla, <b>updated</b>, 79, <a href="https://www.munzee.com/map/u2mn7yzxz/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_StroopwafelInvasionInFelsogalla.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_SZTE, not updated, -21.49<br />
+Hungary_StroopwafelInvasionInFelsogalla kihagyva (100%), <br />
+Hungary_SZTE, not updated, -21.08<br />
 Hungary_MarioInVac, not updated, 0.0<br />
 Hungary_LovagokKertje kihagyva (100%), <br />
 Hungary_ShieldKecskemet, not updated, 0.0<br />
@@ -494,7 +494,7 @@ Denmark_TheRainbowwaveInHillested, not updated, 0.0<br />
 Denmark_SoparkenMaribo kihagyva (100%), <br />
 Denmark_NonneMaribo kihagyva (100%), <br />
 Denmark_ZeecretSundby kihagyva (100%), <br />
-Denmark_FjerNykobing, not updated, 0.3100000000000023<br />
+Denmark_FjerNykobing, not updated, 0.35999999999999943<br />
 Denmark_SpejdernesLejr2022, not updated, 0.0<br />
 Denmark_JuletraeIViby kihagyva (100%), <br />
 Denmark_ZeecretViby kihagyva (100%), <br />
@@ -669,13 +669,5 @@ UnitedKingdom_HMSVictory, not updated, 0.0<br />
 UnitedKingdom_RetroBunzee kihagyva (100%), <br />
 UnitedKingdom_DenverWindmill kihagyva (100%), <br />
 Canada_AdventureGardenForBluestreek kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-Hungary_city_Tatabanya, <b>updated</b>, <a href="https://www.munzee.com/map/u2mndxhne/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Tatabanya.json" target="_blank">json</a><br />
-----felhasználók<br />
-----témák<br />
-Germany_topic_TheFABInTubingen, <b>updated</b>, <a href="https://www.munzee.com/map/u0w7vzm9n/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_topic_TheFABInTubingen.json" target="_blank">json</a><br />
-World_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/World_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-Hungary_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-<b>stop</b> - 2023.02.05 01:53:26<br />
-összesen 2594<br />
+<b>stop</b> - 2023.02.06 01:32:25<br />
+összesen 1332<br />
