--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.02.06 01:10:13<br />
+<b>start</b> - 2023.02.07 01:10:11<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
@@ -274,7 +274,7 @@ Canada_JeffsFarm kihagyva (100%), <br />
 UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
 Germany_JohnTheFab41 kihagyva (100%), <br />
 Germany_RingoTheFab4, not updated, 0.4399999999999977<br />
-Germany_GeorgeTheFab42, not updated, 0.0<br />
+Germany_GeorgeTheFab42, not updated, 0.14000000000000057<br />
 Germany_PaulTheFab43, not updated, 0.3499999999999943<br />
 Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
@@ -508,7 +508,7 @@ Denmark_ZeecretHilleroed kihagyva (100%), <br />
 Denmark_FlatSquare kihagyva (100%), <br />
 USA_HotelEvo kihagyva (100%), <br />
 USA_Emoji, not updated, 0.0<br />
-USA_ElectricJHawk, not updated, 0.0<br />
+USA_ElectricJHawk, not updated, 0.1700000000000017<br />
 USA_DesMoinesGreetingCards, not updated, -13.670000000000002<br />
 USA_KCNightLights1 kihagyva (100%), <br />
 USA_KCNightLights2 kihagyva (100%), <br />
@@ -669,5 +669,5 @@ UnitedKingdom_HMSVictory, not updated, 0.0<br />
 UnitedKingdom_RetroBunzee kihagyva (100%), <br />
 UnitedKingdom_DenverWindmill kihagyva (100%), <br />
 Canada_AdventureGardenForBluestreek kihagyva (100%), <br />
-<b>stop</b> - 2023.02.06 01:32:25<br />
-összesen 1332<br />
+<b>stop</b> - 2023.02.07 01:32:33<br />
+összesen 1342<br />
