--- a/feladat.html
+++ b/feladat.html
@@ -670,3 +670,4 @@ UnitedKingdom_RetroBunzee kihagyva (100%), <br />
 UnitedKingdom_DenverWindmill kihagyva (100%), <br />
 Canada_AdventureGardenForBluestreek kihagyva (100%), <br />
 Australia_GattonArrowsArrow1, <b>updated</b>, 260, <a href="https://www.munzee.com/map/r7h71n6fd/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_GattonArrowsArrow1.json" target="_blank">json</a> <b>100%</b><br />
+Australia_GattonArrowsArrow2, <b>updated</b>, 76, <a href="https://www.munzee.com/map/r7h71r6gq/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_GattonArrowsArrow2.json" target="_blank">json</a><br />
