--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.02.07 09:24:59<br />
+<b>start</b> - 2023.02.07 10:06:30<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -36.67000000000001<br />
+Hungary_VotiveChurch, not updated, -37.02<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -669,5 +669,6 @@ UnitedKingdom_HMSVictory, not updated, 0.0<br />
 UnitedKingdom_RetroBunzee kihagyva (100%), <br />
 UnitedKingdom_DenverWindmill kihagyva (100%), <br />
 Canada_AdventureGardenForBluestreek kihagyva (100%), <br />
-Australia_GattonArrowsArrow1, <b>updated</b>, 260, <a href="https://www.munzee.com/map/r7h71n6fd/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_GattonArrowsArrow1.json" target="_blank">json</a> <b>100%</b><br />
-Australia_GattonArrowsArrow2, <b>updated</b>, 76, <a href="https://www.munzee.com/map/r7h71r6gq/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_GattonArrowsArrow2.json" target="_blank">json</a><br />
+Australia_GattonArrowsArrow1 kihagyva (100%), <br />
+Australia_GattonArrowsArrow2, not updated, 0.0<br />
+Australia_GattonArrowsArrow3, <b>updated</b>, 48, <a href="https://www.munzee.com/map/r7h71q6jx/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_GattonArrowsArrow3.json" target="_blank">json</a><br />
