--- a/feladat.html
+++ b/feladat.html
@@ -672,3 +672,4 @@ Canada_AdventureGardenForBluestreek kihagyva (100%), <br />
 Australia_GattonArrowsArrow1 kihagyva (100%), <br />
 Australia_GattonArrowsArrow2, not updated, 0.0<br />
 Australia_GattonArrowsArrow3, <b>updated</b>, 48, <a href="https://www.munzee.com/map/r7h71q6jx/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_GattonArrowsArrow3.json" target="_blank">json</a><br />
+Australia_GattonArrowsArrow4, <b>updated</b>, 179, <a href="https://www.munzee.com/map/r7h71k8tr/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_GattonArrowsArrow4.json" target="_blank">json</a><br />
