--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.02.07 10:06:30<br />
+<b>start</b> - 2023.02.07 13:57:50<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -37.02<br />
+Hungary_VotiveChurch, not updated, -36.07000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -393,7 +393,7 @@ USA_EmeraldInMcKinney kihagyva (100%), <br />
 Australia_EmeraldInMelbourne kihagyva (100%), <br />
 UnitedKingdom_EmeraldInGreenwich kihagyva (100%), <br />
 Australia_EmeraldInSydney kihagyva (100%), <br />
-BosniaHerzegovina_PanonskaJezeraTuzla, not updated, 0.0<br />
+BosniaHerzegovina_PanonskaJezeraTuzla, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
 Serbia_JapanseMaple kihagyva (100%), <br />
 Greece_TheLighthouseOfChania kihagyva (100%), <br />
 Jersey_JerzeeClan, not updated, 0.0<br />
@@ -671,24 +671,25 @@ UnitedKingdom_DenverWindmill kihagyva (100%), <br />
 Canada_AdventureGardenForBluestreek kihagyva (100%), <br />
 Australia_GattonArrowsArrow1 kihagyva (100%), <br />
 Australia_GattonArrowsArrow2, not updated, 0.0<br />
-Australia_GattonArrowsArrow3, <b>updated</b>, 48, <a href="https://www.munzee.com/map/r7h71q6jx/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_GattonArrowsArrow3.json" target="_blank">json</a><br />
-Australia_GattonArrowsArrow4, <b>updated</b>, 179, <a href="https://www.munzee.com/map/r7h71k8tr/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_GattonArrowsArrow4.json" target="_blank">json</a><br />
-Australia_GattonArrowsArrow5, <b>updated</b>, 76, <a href="https://www.munzee.com/map/r7h71k8m5/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_GattonArrowsArrow5.json" target="_blank">json</a><br />
-Australia_BeeJewelled, <b>updated</b>, 103, <a href="https://www.munzee.com/map/r7h6gk67j/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_BeeJewelled.json" target="_blank">json</a> <b>100%</b><br />
-Australia_SoonBeeSpring, <b>updated</b>, 137, <a href="https://www.munzee.com/map/r7h6g4uvh/16.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_SoonBeeSpring.json" target="_blank">json</a> <b>100%</b><br />
-Australia_WeBeePawns, <b>updated</b>, 250, <a href="https://www.munzee.com/map/r7h6fcj3s/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_WeBeePawns.json" target="_blank">json</a> <b>100%</b><br />
-Australia_BeeFlats, <b>updated</b>, 115, <a href="https://www.munzee.com/map/r7h6g02c3/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_BeeFlats.json" target="_blank">json</a> <b>100%</b><br />
-Australia_BeeQueen, <b>updated</b>, 218, <a href="https://www.munzee.com/map/r7h6g0w0p/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_BeeQueen.json" target="_blank">json</a> <b>100%</b><br />
-Australia_BeeTree, <b>updated</b>, 175, <a href="https://www.munzee.com/map/r7h6dzurf/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_BeeTree.json" target="_blank">json</a> <b>100%</b><br />
-Australia_BeeLucky, <b>updated</b>, 212, <a href="https://www.munzee.com/map/r7h6eqkm5/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_BeeLucky.json" target="_blank">json</a> <b>100%</b><br />
-Australia_HereBeeZodiacs, <b>updated</b>, 162, <a href="https://www.munzee.com/map/r7h6gff7q/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_HereBeeZodiacs.json" target="_blank">json</a> <b>100%</b><br />
-Australia_FlatterBee, <b>updated</b>, 403, <a href="https://www.munzee.com/map/r7h6g9pnh/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_FlatterBee.json" target="_blank">json</a> <b>100%</b><br />
-Australia_Honeycomb, <b>updated</b>, 406, <a href="https://www.munzee.com/map/r7h6gc4z9/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_Honeycomb.json" target="_blank">json</a> <b>100%</b><br />
-Australia_TwoBeeOrKnot, <b>updated</b>, 149, <a href="https://www.munzee.com/map/r7h6gcrmm/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_TwoBeeOrKnot.json" target="_blank">json</a><br />
-Australia_HoneyDipper, <b>updated</b>, 147, <a href="https://www.munzee.com/map/r7h6gbq0x/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_HoneyDipper.json" target="_blank">json</a> <b>100%</b><br />
-Australia_LaidleyBees, <b>updated</b>, 205, <a href="https://www.munzee.com/map/r7h6eys0v/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_LaidleyBees.json" target="_blank">json</a> <b>100%</b><br />
-Australia_RUMbleBee, <b>updated</b>, 101, <a href="https://www.munzee.com/map/r7h6sugpe/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_RUMbleBee.json" target="_blank">json</a> <b>100%</b><br />
-Australia_FlatsFlyAKite, <b>updated</b>, 193, <a href="https://www.munzee.com/map/r7h6ts8z3/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_FlatsFlyAKite.json" target="_blank">json</a> <b>100%</b><br />
-Australia_SouthernCrossKite, <b>updated</b>, 135, <a href="https://www.munzee.com/map/r7h6tsg3e/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_SouthernCrossKite.json" target="_blank">json</a> <b>100%</b><br />
-Australia_ToowoombaRose, <b>updated</b>, 159, <a href="https://www.munzee.com/map/r7h5324hk/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_ToowoombaRose.json" target="_blank">json</a><br />
-Australia_SnowBeeMelting, <b>updated</b>, 84, <a href="https://www.munzee.com/map/r7h6g4j12/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_SnowBeeMelting.json" target="_blank">json</a> <b>100%</b><br />
+Australia_GattonArrowsArrow3, not updated, 0.0<br />
+Australia_GattonArrowsArrow4, not updated, 0.0<br />
+Australia_GattonArrowsArrow5, not updated, 0.0<br />
+Australia_BeeJewelled kihagyva (100%), <br />
+Australia_SoonBeeSpring kihagyva (100%), <br />
+Australia_WeBeePawns kihagyva (100%), <br />
+Australia_BeeFlats kihagyva (100%), <br />
+Australia_BeeQueen kihagyva (100%), <br />
+Australia_BeeTree kihagyva (100%), <br />
+Australia_BeeLucky kihagyva (100%), <br />
+Australia_HereBeeZodiacs kihagyva (100%), <br />
+Australia_FlatterBee kihagyva (100%), <br />
+Australia_Honeycomb kihagyva (100%), <br />
+Australia_TwoBeeOrKnot, not updated, 0.0<br />
+Australia_HoneyDipper kihagyva (100%), <br />
+Australia_LaidleyBees kihagyva (100%), <br />
+Australia_RUMbleBee kihagyva (100%), <br />
+Australia_FlatsFlyAKite kihagyva (100%), <br />
+Australia_SouthernCrossKite kihagyva (100%), <br />
+Australia_ToowoombaRose, not updated, 0.0<br />
+Australia_SnowBeeMelting kihagyva (100%), <br />
+USA_CelticSnake, <b>updated</b>, 62, <a href="https://www.munzee.com/map/9vk4uqw9m/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticSnake.json" target="_blank">json</a><br />
