--- a/feladat.html
+++ b/feladat.html
@@ -695,3 +695,4 @@ Australia_SnowBeeMelting kihagyva (100%), <br />
 USA_CelticSnake, <b>updated</b>, 62, <a href="https://www.munzee.com/map/9vk4uqw9m/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticSnake.json" target="_blank">json</a><br />
 Australia_AE2Submarine, <b>updated</b>, 132, <a href="https://www.munzee.com/map/r3grt6gby/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_AE2Submarine.json" target="_blank">json</a> <b>100%</b><br />
 Australia_AussiePossum, <b>updated</b>, 153, <a href="https://www.munzee.com/map/r652njr19/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_AussiePossum.json" target="_blank">json</a> <b>100%</b><br />
+USA_ArizonaCactus, <b>updated</b>, 134, <a href="https://www.munzee.com/map/9w0223h6h/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ArizonaCactus.json" target="_blank">json</a> <b>100%</b><br />
