--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.02.07 13:57:50<br />
+<b>start</b> - 2023.02.07 16:23:51<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -36.07000000000001<br />
+Hungary_VotiveChurch, not updated, -36.67000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -393,7 +393,7 @@ USA_EmeraldInMcKinney kihagyva (100%), <br />
 Australia_EmeraldInMelbourne kihagyva (100%), <br />
 UnitedKingdom_EmeraldInGreenwich kihagyva (100%), <br />
 Australia_EmeraldInSydney kihagyva (100%), <br />
-BosniaHerzegovina_PanonskaJezeraTuzla, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
+BosniaHerzegovina_PanonskaJezeraTuzla, not updated, 0.0<br />
 Serbia_JapanseMaple kihagyva (100%), <br />
 Greece_TheLighthouseOfChania kihagyva (100%), <br />
 Jersey_JerzeeClan, not updated, 0.0<br />
@@ -692,32 +692,33 @@ Australia_FlatsFlyAKite kihagyva (100%), <br />
 Australia_SouthernCrossKite kihagyva (100%), <br />
 Australia_ToowoombaRose, not updated, 0.0<br />
 Australia_SnowBeeMelting kihagyva (100%), <br />
-USA_CelticSnake, <b>updated</b>, 62, <a href="https://www.munzee.com/map/9vk4uqw9m/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticSnake.json" target="_blank">json</a><br />
-Australia_AE2Submarine, <b>updated</b>, 132, <a href="https://www.munzee.com/map/r3grt6gby/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_AE2Submarine.json" target="_blank">json</a> <b>100%</b><br />
-Australia_AussiePossum, <b>updated</b>, 153, <a href="https://www.munzee.com/map/r652njr19/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_AussiePossum.json" target="_blank">json</a> <b>100%</b><br />
-USA_ArizonaCactus, <b>updated</b>, 134, <a href="https://www.munzee.com/map/9w0223h6h/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ArizonaCactus.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_BournemouthBeachHuts, <b>updated</b>, 488, <a href="https://www.munzee.com/map/gcn8w32ez/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_BournemouthBeachHuts.json" target="_blank">json</a> <b>100%</b><br />
-Australia_CarsBoysFirstCar, <b>updated</b>, 120, <a href="https://www.munzee.com/map/r6ugfd6yw/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_CarsBoysFirstCar.json" target="_blank">json</a> <b>100%</b><br />
-Australia_CasinoLuckyStar, <b>updated</b>, 65, <a href="https://www.munzee.com/map/r6ugfw28z/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_CasinoLuckyStar.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_CazmosCelebrationGarden, <b>updated</b>, 295, <a href="https://www.munzee.com/map/gcqp3evbc/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_CazmosCelebrationGarden.json" target="_blank">json</a> <b>100%</b><br />
-Australia_CrocOfMunzees, <b>updated</b>, 259, <a href="https://www.munzee.com/map/rhzxv1907/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_CrocOfMunzees.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_CuppaCazmo, <b>updated</b>, 86, <a href="https://www.munzee.com/map/gcqp37e4w/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_CuppaCazmo.json" target="_blank">json</a> <b>100%</b><br />
-Australia_DroughtAngel, <b>updated</b>, 98, <a href="https://www.munzee.com/map/r7j0e90x9/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_DroughtAngel.json" target="_blank">json</a> <b>100%</b><br />
-Australia_EmuInCanberra, <b>updated</b>, 262, <a href="https://www.munzee.com/map/r3dp4qcmk/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_EmuInCanberra.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_FlatFlying, <b>updated</b>, 180, <a href="https://www.munzee.com/map/gcp1856s3/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_FlatFlying.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_FlatSledding, <b>updated</b>, 396, <a href="https://www.munzee.com/map/gcn8uzjcb/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_FlatSledding.json" target="_blank">json</a> <b>100%</b><br />
-Australia_GoldCoastGhost, <b>updated</b>, 132, <a href="https://www.munzee.com/map/r7j12sz6h/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_GoldCoastGhost.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_Greenman, <b>updated</b>, 361, <a href="https://www.munzee.com/map/gcn8vp8ek/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_Greenman.json" target="_blank">json</a> <b>100%</b><br />
-Australia_HauntedHouse, <b>updated</b>, 439, <a href="https://www.munzee.com/map/r7j10yfh2/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_HauntedHouse.json" target="_blank">json</a> <b>100%</b><br />
-USA_HorsingAroundAggieland, <b>updated</b>, 106, <a href="https://www.munzee.com/map/9v7qp5ne1/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HorsingAroundAggieland.json" target="_blank">json</a> <b>100%</b><br />
-USA_Julbock, <b>updated</b>, 223, <a href="https://www.munzee.com/map/9v6tc48md/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Julbock.json" target="_blank">json</a> <b>100%</b><br />
-USA_ReindeerInKentucky, <b>updated</b>, 201, <a href="https://www.munzee.com/map/dngckqfgd/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ReindeerInKentucky.json" target="_blank">json</a> <b>100%</b><br />
-Australia_LismorePie, <b>updated</b>, 66, <a href="https://www.munzee.com/map/r6uup96ut/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_LismorePie.json" target="_blank">json</a> <b>100%</b><br />
-USA_LostGoldenJellyfish, <b>updated</b>, 143, <a href="https://www.munzee.com/map/9ymn9pbz6/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LostGoldenJellyfish.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_LostJellyfishInBournemouth, <b>updated</b>, 173, <a href="https://www.munzee.com/map/gcn8w3x64/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_LostJellyfishInBournemouth.json" target="_blank">json</a> <b>100%</b><br />
-USA_LostPBJellyfishInRogers, <b>updated</b>, 72, <a href="https://www.munzee.com/map/9ymnbbh19/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LostPBJellyfishInRogers.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_LostTurtleInFerndown, <b>updated</b>, 175, <a href="https://www.munzee.com/map/gcn9j1kg4/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_LostTurtleInFerndown.json" target="_blank">json</a> <b>100%</b><br />
-Australia_MawsonLakesDHSTape, <b>updated</b>, 155, <a href="https://www.munzee.com/map/r1f9fqktr/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_MawsonLakesDHSTape.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_MoreBeachHuts, <b>updated</b>, 444, <a href="https://www.munzee.com/map/gcn8x8fw5/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_MoreBeachHuts.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_Pompey, <b>updated</b>, 609, <a href="https://www.munzee.com/map/gcp2bnhbz/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_Pompey.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_QueensBaton, <b>updated</b>, 130, <a href="https://www.munzee.com/map/u10uq9cxd/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_QueensBaton.json" target="_blank">json</a> <b>100%</b><br />
+USA_CelticSnake, not updated, 0.0<br />
+Australia_AE2Submarine kihagyva (100%), <br />
+Australia_AussiePossum kihagyva (100%), <br />
+USA_ArizonaCactus kihagyva (100%), <br />
+UnitedKingdom_BournemouthBeachHuts kihagyva (100%), <br />
+Australia_CarsBoysFirstCar kihagyva (100%), <br />
+Australia_CasinoLuckyStar kihagyva (100%), <br />
+UnitedKingdom_CazmosCelebrationGarden kihagyva (100%), <br />
+Australia_CrocOfMunzees kihagyva (100%), <br />
+UnitedKingdom_CuppaCazmo kihagyva (100%), <br />
+Australia_DroughtAngel kihagyva (100%), <br />
+Australia_EmuInCanberra kihagyva (100%), <br />
+UnitedKingdom_FlatFlying kihagyva (100%), <br />
+UnitedKingdom_FlatSledding kihagyva (100%), <br />
+Australia_GoldCoastGhost kihagyva (100%), <br />
+UnitedKingdom_Greenman kihagyva (100%), <br />
+Australia_HauntedHouse kihagyva (100%), <br />
+USA_HorsingAroundAggieland kihagyva (100%), <br />
+USA_Julbock kihagyva (100%), <br />
+USA_ReindeerInKentucky kihagyva (100%), <br />
+Australia_LismorePie kihagyva (100%), <br />
+USA_LostGoldenJellyfish kihagyva (100%), <br />
+UnitedKingdom_LostJellyfishInBournemouth kihagyva (100%), <br />
+USA_LostPBJellyfishInRogers kihagyva (100%), <br />
+UnitedKingdom_LostTurtleInFerndown kihagyva (100%), <br />
+Australia_MawsonLakesDHSTape kihagyva (100%), <br />
+UnitedKingdom_MoreBeachHuts kihagyva (100%), <br />
+UnitedKingdom_Pompey kihagyva (100%), <br />
+UnitedKingdom_QueensBaton kihagyva (100%), <br />
+USA_RockingHorseInOhio, <b>updated</b>, 111, <a href="https://www.munzee.com/map/dp5u4cvsd/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_RockingHorseInOhio.json" target="_blank">json</a> <b>100%</b><br />
