--- a/feladat.html
+++ b/feladat.html
@@ -722,3 +722,4 @@ UnitedKingdom_MoreBeachHuts kihagyva (100%), <br />
 UnitedKingdom_Pompey kihagyva (100%), <br />
 UnitedKingdom_QueensBaton kihagyva (100%), <br />
 USA_RockingHorseInOhio, <b>updated</b>, 111, <a href="https://www.munzee.com/map/dp5u4cvsd/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_RockingHorseInOhio.json" target="_blank">json</a> <b>100%</b><br />
+Australia_RooInCanberra, <b>updated</b>, 357, <a href="https://www.munzee.com/map/r3dp4qvkn/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_RooInCanberra.json" target="_blank">json</a> <b>100%</b><br />
