--- a/feladat.html
+++ b/feladat.html
@@ -731,3 +731,4 @@ UnitedKingdom_WinterSolstice, <b>updated</b>, 240, <a href="https://www.munzee.c
 Australia_MalenyTrees, <b>updated</b>, 167, <a href="https://www.munzee.com/map/r7hxy0v52/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_MalenyTrees.json" target="_blank">json</a><br />
 USA_MunzeeX, <b>updated</b>, 250, <a href="https://www.munzee.com/map/dqctz2pgz/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MunzeeX.json" target="_blank">json</a> <b>100%</b><br />
 USA_MunzeesXBirthday, <b>updated</b>, 372, <a href="https://www.munzee.com/map/cbjb40uyp/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MunzeesXBirthday.json" target="_blank">json</a> <b>100%</b><br />
+USA_BobbyTheZombie, <b>updated</b>, 475, <a href="https://www.munzee.com/map/cbjb28d2h/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BobbyTheZombie.json" target="_blank">json</a> <b>100%</b><br />
