--- a/feladat.html
+++ b/feladat.html
@@ -732,3 +732,4 @@ Australia_MalenyTrees, <b>updated</b>, 167, <a href="https://www.munzee.com/map/
 USA_MunzeeX, <b>updated</b>, 250, <a href="https://www.munzee.com/map/dqctz2pgz/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MunzeeX.json" target="_blank">json</a> <b>100%</b><br />
 USA_MunzeesXBirthday, <b>updated</b>, 372, <a href="https://www.munzee.com/map/cbjb40uyp/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MunzeesXBirthday.json" target="_blank">json</a> <b>100%</b><br />
 USA_BobbyTheZombie, <b>updated</b>, 475, <a href="https://www.munzee.com/map/cbjb28d2h/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BobbyTheZombie.json" target="_blank">json</a> <b>100%</b><br />
+USA_EasterMunzeePin, <b>updated</b>, 104, <a href="https://www.munzee.com/map/dnqg4z2cq/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_EasterMunzeePin.json" target="_blank">json</a><br />
