--- a/feladat.html
+++ b/feladat.html
@@ -744,3 +744,4 @@ USA_2ndAnnualCuriosiTeaParty2, <b>updated</b>, 268, <a href="https://www.munzee.
 USA_JunkArt, <b>updated</b>, 406, <a href="https://www.munzee.com/map/dp2wth50p/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_JunkArt.json" target="_blank">json</a><br />
 USA_FolkstonTomahawk, <b>updated</b>, 388, <a href="https://www.munzee.com/map/djmxmysxv/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FolkstonTomahawk.json" target="_blank">json</a> <b>100%</b><br />
 Portugal_ShipCanical, <b>updated</b>, 262, <a href="https://www.munzee.com/map/etu472udw/16.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Portugal_ShipCanical.json" target="_blank">json</a> <b>100%</b><br />
+Australia_TourDownUnder, <b>updated</b>, 776, <a href="https://www.munzee.com/map/r1dx8mjsf/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_TourDownUnder.json" target="_blank">json</a><br />
