--- a/feladat.html
+++ b/feladat.html
@@ -747,3 +747,18 @@ Portugal_ShipCanical, <b>updated</b>, 262, <a href="https://www.munzee.com/map/e
 Australia_TourDownUnder, <b>updated</b>, 776, <a href="https://www.munzee.com/map/r1dx8mjsf/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_TourDownUnder.json" target="_blank">json</a><br />
 UnitedKingdom_BathBoat, <b>updated</b>, 283, <a href="https://www.munzee.com/map/gcnk3781r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_BathBoat.json" target="_blank">json</a><br />
 USA_GCardinalFlat, <b>updated</b>, 437, <a href="https://www.munzee.com/map/dngcs0epy/16.0009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GCardinalFlat.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+Australia_city_Laidley, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6erkpu/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_city_Laidley.json" target="_blank">json</a><br />
+Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
+----felhasználók<br />
+BonnieB1_all, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_all.json" target="_blank">json</a><br />
+BonnieB1_completed, <b>updated</b>, <a href="https://www.munzee.com/map/r7hg9jecp/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_completed.json" target="_blank">json</a><br />
+BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6gcrmm/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
+Brandikorte_all, <b>updated</b>, <a href="https://www.munzee.com/map/9vff269xn/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Brandikorte_all.json" target="_blank">json</a><br />
+Brandikorte_completed, <b>updated</b>, <a href="https://www.munzee.com/map/cbjb28d2h/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Brandikorte_completed.json" target="_blank">json</a><br />
+geomatrix_all, <b>updated</b>, <a href="https://www.munzee.com/map/9zvxmdpr9/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/geomatrix_all.json" target="_blank">json</a><br />
+geomatrix_completed, <b>updated</b>, <a href="https://www.munzee.com/map/9zvxy0n58/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/geomatrix_completed.json" target="_blank">json</a><br />
+----témák<br />
+<b>stop</b> - 2023.02.07 18:52:43<br />
+összesen 8932<br />
