--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.02.07 16:23:51<br />
+<b>start</b> - 2023.02.08 01:10:12<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -36.67000000000001<br />
+Hungary_VotiveChurch, not updated, -36.760000000000005<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -720,45 +720,4 @@ UnitedKingdom_LostTurtleInFerndown kihagyva (100%), <br />
 Australia_MawsonLakesDHSTape kihagyva (100%), <br />
 UnitedKingdom_MoreBeachHuts kihagyva (100%), <br />
 UnitedKingdom_Pompey kihagyva (100%), <br />
-UnitedKingdom_QueensBaton kihagyva (100%), <br />
-USA_RockingHorseInOhio, <b>updated</b>, 111, <a href="https://www.munzee.com/map/dp5u4cvsd/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_RockingHorseInOhio.json" target="_blank">json</a> <b>100%</b><br />
-Australia_RooInCanberra, <b>updated</b>, 357, <a href="https://www.munzee.com/map/r3dp4qvkn/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_RooInCanberra.json" target="_blank">json</a> <b>100%</b><br />
-Australia_SAPartyHat, <b>updated</b>, 250, <a href="https://www.munzee.com/map/r1fdh7cdx/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_SAPartyHat.json" target="_blank">json</a> <b>100%</b><br />
-Australia_Time2MunzeeLilydale, <b>updated</b>, 97, <a href="https://www.munzee.com/map/r1r35ck3u/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_Time2MunzeeLilydale.json" target="_blank">json</a> <b>100%</b><br />
-Australia_TrojanKitty, <b>updated</b>, 85, <a href="https://www.munzee.com/map/rk4pdkx91/16.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_TrojanKitty.json" target="_blank">json</a> <b>100%</b><br />
-Australia_Tulips, <b>updated</b>, 173, <a href="https://www.munzee.com/map/r1pre7s7r/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_Tulips.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_WinterSolstice, <b>updated</b>, 240, <a href="https://www.munzee.com/map/gcn9hbuf4/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_WinterSolstice.json" target="_blank">json</a> <b>100%</b><br />
-Australia_MalenyTrees, <b>updated</b>, 167, <a href="https://www.munzee.com/map/r7hxy0v52/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_MalenyTrees.json" target="_blank">json</a><br />
-USA_MunzeeX, <b>updated</b>, 250, <a href="https://www.munzee.com/map/dqctz2pgz/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MunzeeX.json" target="_blank">json</a> <b>100%</b><br />
-USA_MunzeesXBirthday, <b>updated</b>, 372, <a href="https://www.munzee.com/map/cbjb40uyp/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MunzeesXBirthday.json" target="_blank">json</a> <b>100%</b><br />
-USA_BobbyTheZombie, <b>updated</b>, 475, <a href="https://www.munzee.com/map/cbjb28d2h/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BobbyTheZombie.json" target="_blank">json</a> <b>100%</b><br />
-USA_EasterMunzeePin, <b>updated</b>, 104, <a href="https://www.munzee.com/map/dnqg4z2cq/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_EasterMunzeePin.json" target="_blank">json</a><br />
-Germany_10thBirthdayBerlin, <b>updated</b>, 570, <a href="https://www.munzee.com/map/u336ymvtx/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_10thBirthdayBerlin.json" target="_blank">json</a><br />
-UnitedKingdom_MiniPortal3, <b>updated</b>, 120, <a href="https://www.munzee.com/map/gcn8t1y5g/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_MiniPortal3.json" target="_blank">json</a> <b>100%</b><br />
-USA_MiniPortal4, <b>updated</b>, 110, <a href="https://www.munzee.com/map/dngc7gdxv/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MiniPortal4.json" target="_blank">json</a> <b>100%</b><br />
-USA_NoblesvilleTaco, <b>updated</b>, 336, <a href="https://www.munzee.com/map/dp4gfcyd1/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_NoblesvilleTaco.json" target="_blank">json</a><br />
-Canada_FabulousFebruaryFeteHeart, <b>updated</b>, 281, <a href="https://www.munzee.com/map/c2b2phnvx/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_FabulousFebruaryFeteHeart.json" target="_blank">json</a><br />
-Canada_FabulousFebruaryFeteFlat, <b>updated</b>, 63, <a href="https://www.munzee.com/map/c2b2phnvx/16.0009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_FabulousFebruaryFeteFlat.json" target="_blank">json</a><br />
-Canada_MadMarchPi, <b>updated</b>, 257, <a href="https://www.munzee.com/map/c2b80njfe/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_MadMarchPi.json" target="_blank">json</a> <b>100%</b><br />
-USA_2ndAnnualCuriosiTeaParty2, <b>updated</b>, 268, <a href="https://www.munzee.com/map/dp2wschgs/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_2ndAnnualCuriosiTeaParty2.json" target="_blank">json</a> <b>100%</b><br />
-USA_JunkArt, <b>updated</b>, 406, <a href="https://www.munzee.com/map/dp2wth50p/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_JunkArt.json" target="_blank">json</a><br />
-USA_FolkstonTomahawk, <b>updated</b>, 388, <a href="https://www.munzee.com/map/djmxmysxv/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FolkstonTomahawk.json" target="_blank">json</a> <b>100%</b><br />
-Portugal_ShipCanical, <b>updated</b>, 262, <a href="https://www.munzee.com/map/etu472udw/16.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Portugal_ShipCanical.json" target="_blank">json</a> <b>100%</b><br />
-Australia_TourDownUnder, <b>updated</b>, 776, <a href="https://www.munzee.com/map/r1dx8mjsf/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_TourDownUnder.json" target="_blank">json</a><br />
-UnitedKingdom_BathBoat, <b>updated</b>, 283, <a href="https://www.munzee.com/map/gcnk3781r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_BathBoat.json" target="_blank">json</a><br />
-USA_GCardinalFlat, <b>updated</b>, 437, <a href="https://www.munzee.com/map/dngcs0epy/16.0009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GCardinalFlat.json" target="_blank">json</a> <b>100%</b><br />
-----csoportok<br />
-----városok<br />
-Australia_city_Laidley, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6erkpu/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_city_Laidley.json" target="_blank">json</a><br />
-Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
-----felhasználók<br />
-BonnieB1_all, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_all.json" target="_blank">json</a><br />
-BonnieB1_completed, <b>updated</b>, <a href="https://www.munzee.com/map/r7hg9jecp/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_completed.json" target="_blank">json</a><br />
-BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6gcrmm/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
-Brandikorte_all, <b>updated</b>, <a href="https://www.munzee.com/map/9vff269xn/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Brandikorte_all.json" target="_blank">json</a><br />
-Brandikorte_completed, <b>updated</b>, <a href="https://www.munzee.com/map/cbjb28d2h/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Brandikorte_completed.json" target="_blank">json</a><br />
-geomatrix_all, <b>updated</b>, <a href="https://www.munzee.com/map/9zvxmdpr9/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/geomatrix_all.json" target="_blank">json</a><br />
-geomatrix_completed, <b>updated</b>, <a href="https://www.munzee.com/map/9zvxy0n58/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/geomatrix_completed.json" target="_blank">json</a><br />
-----témák<br />
-<b>stop</b> - 2023.02.07 18:52:43<br />
-összesen 8932<br />
+UnitedKingdom_QueensBaton, <b>updated</b>, 116, <a href="https://www.munzee.com/map/u10uq9cxd/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_QueensBaton.json" target="_blank">json</a> <b>100%</b><br />
