--- a/feladat.html
+++ b/feladat.html
@@ -721,3 +721,11 @@ Australia_MawsonLakesDHSTape kihagyva (100%), <br />
 UnitedKingdom_MoreBeachHuts kihagyva (100%), <br />
 UnitedKingdom_Pompey kihagyva (100%), <br />
 UnitedKingdom_QueensBaton, <b>updated</b>, 119, <a href="https://www.munzee.com/map/u10uq9cxd/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_QueensBaton.json" target="_blank">json</a> <b>100%</b><br />
+USA_RockingHorseInOhio kihagyva (100%), <br />
+Australia_RooInCanberra kihagyva (100%), <br />
+Australia_SAPartyHat kihagyva (100%), <br />
+Australia_Time2MunzeeLilydale kihagyva (100%), <br />
+Australia_TrojanKitty kihagyva (100%), <br />
+Australia_Tulips kihagyva (100%), <br />
+UnitedKingdom_WinterSolstice kihagyva (100%), <br />
+Australia_MalenyTrees, <b>updated</b>, 165, <a href="https://www.munzee.com/map/r7hxy0v52/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_MalenyTrees.json" target="_blank">json</a><br />
