--- a/feladat.html
+++ b/feladat.html
@@ -729,3 +729,31 @@ Australia_TrojanKitty kihagyva (100%), <br />
 Australia_Tulips kihagyva (100%), <br />
 UnitedKingdom_WinterSolstice kihagyva (100%), <br />
 Australia_MalenyTrees, <b>updated</b>, 165, <a href="https://www.munzee.com/map/r7hxy0v52/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_MalenyTrees.json" target="_blank">json</a><br />
+USA_MunzeeX kihagyva (100%), <br />
+USA_MunzeesXBirthday kihagyva (100%), <br />
+USA_BobbyTheZombie kihagyva (100%), <br />
+USA_EasterMunzeePin, not updated, 0.0<br />
+Germany_10thBirthdayBerlin, not updated, 0.0<br />
+UnitedKingdom_MiniPortal3 kihagyva (100%), <br />
+USA_MiniPortal4 kihagyva (100%), <br />
+USA_NoblesvilleTaco, not updated, 0.0<br />
+Canada_FabulousFebruaryFeteHeart, not updated, 0.0<br />
+Canada_FabulousFebruaryFeteFlat, not updated, 0.0<br />
+Canada_MadMarchPi kihagyva (100%), <br />
+USA_2ndAnnualCuriosiTeaParty2 kihagyva (100%), <br />
+USA_JunkArt, not updated, 0.0<br />
+USA_FolkstonTomahawk kihagyva (100%), <br />
+Portugal_ShipCanical kihagyva (100%), <br />
+Australia_TourDownUnder, not updated, 0.0<br />
+UnitedKingdom_BathBoat, not updated, 0.0<br />
+USA_GCardinalFlat kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+BonnieB1_all, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_all.json" target="_blank">json</a><br />
+BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6gcrmm/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
+----témák<br />
+World_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/World_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Netherlands_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u15rfnm03/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+<b>stop</b> - 2023.02.09 01:41:17<br />
+összesen 1866<br />
