--- a/feladat.html
+++ b/feladat.html
@@ -19,3 +19,40 @@ USA_MunzeeLogo, not updated, 0.09000000000000341<br />
 NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
 USA_JewelJack-o-Lantern, not updated, 0.37295880149811467<br />
 USA_FortWorth2020DumpsterFire, <b>updated</b>, 633, <a href="https://www.munzee.com/map/9vf9xtnkc/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FortWorth2020DumpsterFire.json" target="_blank">json</a><br />
+UnitedKingdom_LFCBebington, not updated, 0.7518796992481178<br />
+Finland_Nurmijarvi, not updated, 0.5<br />
+Finland_Hyvinkaa, not updated, 0.0<br />
+USA_CanonCity, not updated, 0.0<br />
+UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
+Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
+USA_LakewoodPrizewheel, not updated, 0.28999999999999915<br />
+Netherlands_TeaAtGrandma kihagyva (100%), <br />
+Canada_Skull kihagyva (100%), <br />
+Netherlands_VlagEcht kihagyva (100%), <br />
+Netherlands_CittaslowEcht kihagyva (100%), <br />
+USA_GreenvilleGreenWave, not updated, 0.0<br />
+Australia_QueensGambit-Horse, not updated, 0.9345794392523388<br />
+USA_CommerceBarnyard kihagyva (100%), <br />
+USA_UtahBeehive, not updated, 0.0<br />
+Canada_DinosaurPark, not updated, 0.0<br />
+UnitedKingdom_BallochIceCream kihagyva (100%), <br />
+Australia_YoureAStar, not updated, 0.18000000000000682<br />
+USA_StAugustinePirateShip, not updated, 0.0<br />
+Spain_WineOClock kihagyva (100%), <br />
+Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
+Netherlands_PacMunzee, not updated, 0.0<br />
+UnitedKingdom_BristolBalloon, not updated, 0.0<br />
+USA_USMGoldenEagles, not updated, 0.9661835748792278<br />
+USA_Turtle, not updated, 0.7054673721340379<br />
+Finland_BioOtokka, not updated, 0.0<br />
+Canada_GatineauFMGGarden, not updated, 0.8800000000000097<br />
+Lithuania_KaunasBasketball, not updated, 0.29999999999999716<br />
+Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
+Switzerland_GiddyUpGo, not updated, 1.0<br />
+Belgium_KnokkeHeist, not updated, 0.5<br />
+Hungary_Evolution, not updated, 0.9722222222222143<br />
+Netherlands_WapenVanEnkhuizen, not updated, 0.0<br />
+USA_OfficerDown, not updated, 0.0<br />
+Hungary_Brigetio, not updated, 0.3846153846153797<br />
+Hungary_GoatInKecskemet, not updated, 0.6999999999999886<br />
+Hungary_TaskasSmiley, <b>updated</b>, 253, <a href="https://www.munzee.com/map/u2mxgdrju/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_TaskasSmiley.json" target="_blank">json</a><br />
