--- a/feladat.html
+++ b/feladat.html
@@ -133,3 +133,23 @@ USA_GreenvilleCloverLeaf kihagyva (100%), <br />
 Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
 Denmark_EmeraldInHilleroed kihagyva (100%), <br />
 Finland_HalkokarinEvovene, <b>updated</b>, 1109, <a href="https://www.munzee.com/map/ue27q1nvm/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_HalkokarinEvovene.json" target="_blank">json</a><br />
+USA_CarettaSeaTurtle kihagyva (100%), <br />
+UnitedKingdom_Uddersfield, not updated, 0.1474926253687272<br />
+Netherlands_LuckyClover kihagyva (100%), <br />
+Poland_Jewel kihagyva (100%), <br />
+Poland_Reksio kihagyva (100%), <br />
+Finland_KokkolanVaakuna kihagyva (100%), <br />
+Germany_PapageiCrumstadt kihagyva (100%), <br />
+USA_XIBirthdayMadHatter kihagyva (100%), <br />
+USA_RobHeartsLou1 kihagyva (100%), <br />
+USA_RobHeartsLou2 kihagyva (100%), <br />
+USA_Corgi kihagyva (100%), <br />
+Poland_ZamekPiastow kihagyva (100%), <br />
+UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
+Canada_HalloweenInOttawa kihagyva (100%), <br />
+Slovakia_HungryBatTerry kihagyva (100%), <br />
+USA_LakevillesSeaTurtle kihagyva (100%), <br />
+USA_LightningBoltInSapphire kihagyva (100%), <br />
+USA_AppleValley-EvolutionaryFlower, not updated, 0.5<br />
+Germany_Bullseye kihagyva (100%), <br />
+Finland_TampereElectric, <b>updated</b>, 856, <a href="https://www.munzee.com/map/udbvv1pgw/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_TampereElectric.json" target="_blank">json</a><br />
