--- a/feladat.html
+++ b/feladat.html
@@ -748,3 +748,4 @@ Australia_TourDownUnder, not updated, 0.0<br />
 UnitedKingdom_BathBoat, not updated, 0.0<br />
 USA_GCardinalFlat kihagyva (100%), <br />
 Canada_WarblersSquare, <b>updated</b>, 111, <a href="https://www.munzee.com/map/dpz8e29qd/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_WarblersSquare.json" target="_blank">json</a><br />
+Portugal_Saab9xInMadeira, <b>updated</b>, 102, <a href="https://www.munzee.com/map/etu1c7ttr/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Portugal_Saab9xInMadeira.json" target="_blank">json</a><br />
