--- a/feladat.html
+++ b/feladat.html
@@ -780,3 +780,17 @@ USA_BundtiniTrail, <b>updated</b>, 121, <a href="https://www.munzee.com/map/9vf6
 USA_JewelOfAHeart, <b>updated</b>, 138, <a href="https://www.munzee.com/map/9vf6q7snp/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_JewelOfAHeart.json" target="_blank">json</a> <b>100%</b><br />
 USA_LetsTalkAbundtLove, <b>updated</b>, 63, <a href="https://www.munzee.com/map/9vf6q88ed/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LetsTalkAbundtLove.json" target="_blank">json</a> <b>100%</b><br />
 USA_FortWorthTXCowboyBoots, <b>updated</b>, 742, <a href="https://www.munzee.com/map/9vff2xznz/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FortWorthTXCowboyBoots.json" target="_blank">json</a><br />
+----csoportok<br />
+USA_Avocato, <b>updated</b>, <a href="https://www.munzee.com/map/9vf6qbc6f/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Avocato.json" target="_blank">json</a><br />
+----városok<br />
+USA_city_FortWorth, <b>updated</b>, <a href="https://www.munzee.com/map/9vf9znt4b/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_FortWorth.json" target="_blank">json</a><br />
+USA_city_Greenville, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u4gsgr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Greenville.json" target="_blank">json</a><br />
+----felhasználók<br />
+Brandikorte_all, <b>updated</b>, <a href="https://www.munzee.com/map/9vff269xn/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Brandikorte_all.json" target="_blank">json</a><br />
+Brandikorte_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9vf6q4zrb/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Brandikorte_empty.json" target="_blank">json</a><br />
+denali0407_all, <b>updated</b>, <a href="https://www.munzee.com/map/9vf6qtn7g/15.0002" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/denali0407_all.json" target="_blank">json</a><br />
+denali0407_completed, <b>updated</b>, <a href="https://www.munzee.com/map/9vf6wcht4/15.002" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/denali0407_completed.json" target="_blank">json</a><br />
+denali0407_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9vf6npmgv/15.002" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/denali0407_empty.json" target="_blank">json</a><br />
+----témák<br />
+<b>stop</b> - 2023.02.12 07:15:13<br />
+összesen 6685<br />
